--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
 	quechua.src = 'audio/siminchikmanta.mp3';
 	como.src = 'audio/como.mp3';
-	que.src = 'audio/que.mp3';
+	que.src = 'audio/Que.mp3';
 	inspiracion.src = 'audio/munayninchik.mp3';
 	proyectos.src = 'audio/ruwayninchik.mp3';
 	nosotros.src = 'audio/nuqanchik.mp3';
