--- a/index.html
+++ b/index.html
@@ -312,7 +312,6 @@
 			  <input id="search" class="search-input " type="text"> <i style="color:white;" class="icon-search2" aria-hidden="true"></i>
 			</div> 
     </div>
-	
 	</section>
 
 
@@ -695,15 +694,17 @@
 					<p style="font-size: 18px;">Repositorio de audio y de transcripciones de la lengua Quechua, disponible.</p>
 				</div>
 				<div class="col-md-3 col-sm-6 text-center fh5co-service to-animate"  >
+					<a style="color:white;"  href="traductor.html">
 					<img src="images/icons/card_design.png" class="icons_bottom">
 					<h3   onmouseout="traductor_quechua.pause();" onmouseover="openAudio('traductor_quechua')">
-					<a style="color:white;"  href="traductor.html">TRADUCTOR QUECHUA</a></h3> 
+					TRADUCTOR QUECHUA</h3> </a>
 					<p style="font-size: 18px;">El primer traductor de voz de la lengua Quechua disponible para todo el mundo.</p>
 				</div>
 
 				<div class="col-md-3 col-sm-6 text-center fh5co-service to-animate"  >
+					<a style="color:white;" href="radios.html">
 					<img src="images/icons/radio.png" class="icons_bottom">
-					<h3  onmouseout="programas_radio.pause();" onmouseover="openAudio('programas_radio')">PROGRAMAS DE RADIO</h3>
+					<h3  onmouseout="programas_radio.pause();" onmouseover="openAudio('programas_radio')">PROGRAMAS DE RADIO</h3></a>
 					<p style="font-size: 18px;">La comunidad de radios que transmiten su programación en la lengua Quechua.</p>
 				</div>
 				<div class="col-md-3 col-sm-6 text-center fh5co-service to-animate"  >
