--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 						<img src="images/icons/foreign_language.png" class="icons_bottom">
 						<h2>CORPUS</h2>
 						<p>Queremos tu ayuda para tener repositorio completo de audio y texgo de toda las lenguas sudamericanas.</p>
-						<p><a href="#" class="btn btn-primary">Ayudanos</a></p>
+						<p><a href="https://kuelap.telecom.pucp.edu.pe/corpus/login/?next=/corpus/" class="btn btn-primary">Ayudanos</a></p>
 					</div>
 				</div>
 				<div class="fh5co-block to-animate" >
@@ -402,7 +402,7 @@
 						<img src="images/icons/project.png" class="icons_bottom">
 						<h2>INVESTIGACIONES</h2>
 						<p>Averigua que investigación hay relacionadas a la lengua Quechua o comparte tu investigación con nosotros.</p>
-						<p><a href="#" class="btn btn-primary">Entrar</a></p>
+						<p><a href="investigaciones.html" class="btn btn-primary">Entrar</a></p>
 					</div>
 				</div>
 				<div class="fh5co-block to-animate" >
@@ -422,7 +422,7 @@
 		
 		<div class="delimitador">
 		<div class="contenedor">
-		<iframe src="https://www.youtube.com/embed/jMWZywjNRrs" frameborder="0" allowfullscreen="allowfullscreen" ></iframe>
+		<iframe width="640" height="360" src="https://www.youtube.com/embed/cE3JHBcLAY0" frameborder="0" allowfullscreen></iframe>
 		</div>
 	
 		</div>	
@@ -508,7 +508,7 @@
 			</div>
 			<div class="row row-bottom-padded-sm">
 				<div class="col-md-3 col-sm-6 col-xxs-12">
-					<a href="images/work_1.jpg" class="fh5co-project-item image-popup to-animate" onmouseover="openAudio('escritores')" onmouseout="escritores.pause();">
+					<a href="escritores.html" class="fh5co-project-item  to-animate" onmouseover="openAudio('escritores')" onmouseout="escritores.pause();">
 						<img src="images/work_1.jpg" alt="Image" class="img-responsive">
 						<div class="fh5co-text">
 						<h2>Escritores</h2>
@@ -517,7 +517,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xxs-12">
-					<a href="images/work_2.jpg" class="fh5co-project-item image-popup to-animate" onmouseover="openAudio('artistas')" onmouseout="artistas.pause();">
+					<a href="artistas.html" class="fh5co-project-item  to-animate" onmouseover="openAudio('artistas')" onmouseout="artistas.pause();">
 						<img src="images/work_2.jpg" alt="Image" class="img-responsive">
 						<div class="fh5co-text">
 						<h2>Artistas</h2>
@@ -689,8 +689,10 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 col-sm-6 text-center fh5co-service to-animate">
+				<a href="https://kuelap.telecom.pucp.edu.pe/corpus/login/?next=/corpus/">
 					<img src="images/icons/audio_console.png" class="icons_bottom" >
-					<h3   onmouseout="proyectos_seccion.pause();" onmouseover="openAudio('proyectos_seccion')">CORPUS QUECHUA</h3>
+					
+					<h3   onmouseout="proyectos_seccion.pause();" onmouseover="openAudio('proyectos_seccion')">CORPUS QUECHUA</h3></a>
 					<p style="font-size: 18px;">Repositorio de audio y de transcripciones de la lengua Quechua, disponible.</p>
 				</div>
 				<div class="col-md-3 col-sm-6 text-center fh5co-service to-animate"  >
@@ -819,10 +821,10 @@
 <!-- lorenzo -->
 				<div class="fondo">
 					<div class="fh5co-person text-center to-animate">
-						<figure><img src="images/person2.jpg" alt="Image"></figure>
-						<h3>Nelsi Melgarejo Vergara</h3>
+						<figure><img src="images/person4.jpg" alt="Image"></figure>
+						<h3>Lorenzo Ruiz De La Vega Tenorio</h3>
 						<span class="fh5co-position">Tesista</span>
-						<p>Bachiller de la carrera de ingeniería de sistemas altamente creativa, con iniciativa y puntualidad, asumo con responsabilidad los retos y metas que la institución me plantee; adaptabilidad al cambio, facilidad para trabajar en equipo, así como para resolver problemas eficientemente.</p>
+						<p>Líder indígena. Comunicador quechua, con inclinación a las relaciones públicas, investigación periodística y académica, redacción y manejo de redes sociales. Egresado de periodismo de la Universidad Antonio Ruiz de Montoya. Especialista en proyectos de desarrollo social. Apasionado radialista y documentalista, egresado de la Universidad Iberoamericana de México. Traductor y intérprete del quechua sureño (chanka y collao).</p>
 						<ul class="social social-circle">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
@@ -846,29 +848,29 @@
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<div class="fh5co-counter to-animate" onmouseover="openAudio('continente')" onmouseout="continente.pause();">
 						<img src="images/icons/geography.png" >
-						<span class="fh5co-counter-number js-counter" data-from="0" data-to="1" data-speed="5000" data-refresh-interval="50">1</span>
-						<span class="fh5co-counter-label">Continente</span>
+						<span class="fh5co-counter-number js-counter" data-from="0" data-to="400" data-speed="5000" data-refresh-interval="50">1</span>
+						<span class="fh5co-counter-label">Lenguas</span>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<div class="fh5co-counter to-animate" onmouseover="openAudio('paises')" onmouseout="paises.pause();">
 						<img src="images/icons/country.png" >
-						<span class="fh5co-counter-number js-counter" data-from="0" data-to="7" data-speed="5000" data-refresh-interval="50">7</span>
-						<span class="fh5co-counter-label">Paises</span>
+						<span class="fh5co-counter-number js-counter" data-from="0" data-to="1200" data-speed="5000" data-refresh-interval="50">7</span>
+						<span class="fh5co-counter-label">Voluntarios</span>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<div class="fh5co-counter to-animate" onmouseover="openAudio('personas')" onmouseout="personas.pause();">
 						<img src="images/icons/group.png" >
-						<span class="fh5co-counter-number js-counter" data-from="0" data-to="7800000" data-speed="5000" data-refresh-interval="50">7'800,000</span>
-						<span class="fh5co-counter-label">Personas</span>
+						<span class="fh5co-counter-number js-counter" data-from="0" data-to="15000" data-speed="5000" data-refresh-interval="50">7'800,000</span>
+						<span class="fh5co-counter-label">Hablantes</span>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<div class="fh5co-counter to-animate" onmouseover="openAudio('lenguas')" onmouseout="lenguas.pause();">
 						<img src="images/icons/public_chat.png" >
-						<span class="fh5co-counter-number js-counter" data-from="0" data-to="1" data-speed="5000" data-refresh-interval="50">1</span>
-						<span class="fh5co-counter-label">Lenguas</span>
+						<span class="fh5co-counter-number js-counter" data-from="0" data-to="50000" data-speed="5000" data-refresh-interval="50">1</span>
+						<span class="fh5co-counter-label">Corpus Quechua</span>
 					</div>
 				</div>
 			</div>
