--- a/index.html
+++ b/index.html
@@ -616,8 +616,7 @@
 						</blockquote>
 						<div class="author to-animate">
 							<figure><img src="images/person2.jpg" alt="Person"></figure>
-							<p>
-							Nelsi Melgarejo Vergara <br> <a href="https://twitter.com/nelsibelly" target="_blank">Universidad Nacional del Callao</a> <span class="subtext">Tesista</span>
+							<p>Nelsi Melgarejo Vergara <br> <a href="https://twitter.com/nelsibelly" target="_blank">Universidad Nacional del Callao</a> <span class="subtext">Tesista</span>
 							</p>
 						</div>
 					</div>
@@ -979,6 +978,31 @@
 	<!--	<div id="map" class="to-animate"></div> -->
 	</section>
 	
+	
+	<footer id="auspiciadores">
+		
+		<div class="container">
+			
+				<div class="col-md-12 ">
+					<p>Auspiciadores:</a></p>
+					
+				</div>
+			
+			<div class="row">
+				<div class="col-md-6 ">
+					<a href="https://www.youtube.com/user/pucp" target="_blank" >
+					<img src="images/auspiciadores/pucp.png" style="width:500px" >
+					</a>
+				</div>
+				<div class="col-md-6 ">
+				<br><br>
+					<a href="https://www.youtube.com/user/ConcytecPeru/featured" target="_blank">
+					<img src="images/auspiciadores/concytec.png" style="width:500px"></a>
+				</div>
+				
+			</div>
+		</div>
+	</footer>
 	
 	<footer id="footer" role="contentinfo">
 		<a href="#" class="gotop js-gotop"><i class="icon-arrow-up2"></i></a>
