--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Siminchikkunarayku  </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="Quechua, Catolica, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="Quechua" />
+	<meta name="keywords" content="siminchikkunarayku, quechua, Catolica" />
+	<meta name="author" content="" />
 
 
   	<!-- Facebook and Twitter integration -->
