--- a/artistas.html
+++ b/artistas.html
@@ -1,14 +1,14 @@
 
 <!DOCTYPE html>
-	<html class="no-js"> <!--<![endif]-->
+	<<html class="no-js"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Siminchikkunarayku  </title
+	<title>Siminchikkunarayku  </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="Quechua, Catolica, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="Quechua" />
+	<meta name="keywords" content="siminchikkunarayku, quechua, runasimi, asr, reinvindicación, kichwa, traductor, andes, andino, tecnología, precolombino, aymara, ashanka, awjun, shipino, wanpis, kauki, kawsay" />
+	
 
   
   	<!-- Facebook and Twitter integration -->
@@ -447,7 +447,7 @@ function openSection(texto){
 					<a  class="fh5co-project-item  " >
 						<div class="delimitador">
 							<div class="contenedor">
-								<iframe width="640" height="360" src="https://www.youtube.com/embed/g71PxDjquqI" frameborder="0" allowfullscreen></iframe>
+								<iframe width="640" height="360" src="https://www.youtube.com/embed/U_fSRcMR5iY" frameborder="0" allowfullscreen></iframe>
 							</div>
 						
 						</div>
@@ -497,7 +497,7 @@ function openSection(texto){
 		<div class="container">
 			<div class="">
 				<div class="col-md-12 text-center">
-					<p>&copy; Consorcio de Universidades.<br>Creado por <a href="https://twitter.com/nelsibelly" target="_blank">Nelsi Melgarejo</a></p>
+					<p>&copy; Consorcio de Universidades.</p>
 					
 				</div>
 			</div>
