--- a/mapa.html
+++ b/mapa.html
@@ -7,7 +7,7 @@
 	<title>Siminchikkunarayku  </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="Quechua, Catolica, free bootstrap, html5, css3, mobile first, responsive" />
+	<meta <meta name="keywords" content="siminchikkunarayku, quechua, runasimi, asr, reinvindicación, kichwa, traductor, andes, andino, tecnología, precolombino, aymara, ashanka, awjun, shipino, wanpis, kauki, kawsay" />
 	
 
   
@@ -469,19 +469,21 @@ function openSection(texto){
 <!-- menu home -->
 	
 <section id="fh5co-home" data-section="traductor" style="height: 100%;" >
-<section>	
 	
-		<div id="floating-panel-title" > 
-			<h1  style=" color: #fff;" class="mundo" >QUECHUA EN EL MUNDO&nbsp;&nbsp;<img src="images/icons/quechua.png" height="50px"></h1>
+	
+		<div id="floating-panel-title" style="mapa-responsive"> 
+			<h1  style="font-size:4vw; color: #fff;" class="mundo" >QUECHUA EN EL MUNDO&nbsp;&nbsp;</h1>
 		</div>
+	<div class="row">
 	
 		<div id="floating-panel">
-			<ul class="nav nav-tabs">
+			<ul class="nav navbar-nav" >
 					<li id="escritores" class=""><a  href="#" onclick="getMap('1')" class="btnn1 btnn-primary">Escritores&nbsp;&nbsp;<img src="images/icons/escritores.png" height="50px"></a></li>
 					<li id="artistas" class=""><a  href="#"   onclick="getMap('3')" class="btnn2 btnn-primary">Artistas&nbsp;&nbsp;<img  src="images/icons/artista.png" height="50px"></a></li>
-					<li id="radios" class=""><a  href="#" onclick="getMap('2')" class="btnn3 btnn-primary">Radios&nbsp;&nbsp;<img  src="images/icons/radios.png" height="50px"></a></li>
+					<li id="radios" class=""><a  href="#"   onclick="getMap('2')" class="btnn3 btnn-primary">Radios&nbsp;&nbsp;<img  src="images/icons/radios.png" height="50px"></a></li>
 			</ul>
 		</div>
+	</div>
 					  
 		
 
@@ -490,7 +492,7 @@ function openSection(texto){
 		</div>
 
 	
-</section>
+
 	
 </section>
 	
@@ -587,7 +589,7 @@ function openSection(texto){
 			$('.option-toggle').click(function() {
 				$('#colour-variations').toggleClass('sleep');
 			});
-		});
+		}); 
 	</script>
 	<!-- End demo purposes only -->
 
