--- a/mapa.html
+++ b/mapa.html
@@ -449,7 +449,13 @@
 		            <li><a href="#" onclick="openSection('fh5co-services')" data-nav-section="services" onmouseover="openAudio('proyectos');" onmouseout="proyectos.pause();" ><span>Proyectos</span></a></li>
 		            <li><a href="#" onclick="openSection('fh5co-about')" data-nav-section="about" onmouseover="openAudio('nosotros');" onmouseout="nosotros.pause();" ><span>Nosotros</span></a></li>
 					<li><a href="#" onclick="openSection('fh5co-eventos')" data-nav-section="eventos" onmouseover="openAudio('eventos');" onmouseout="eventos.pause();" ><span>Eventos</span></a></li>
-		            <li><a href="#" onclick="openSection('fh5co-idiomas')" data-nav-section="idiomas" onmouseover="openAudio('idiomas');" onmouseout="idiomas.pause();" ><span>Idioma</span></a></li>
+		            <li class="multilang"><a href="#" data-nav-section="idiomas" onmouseover="openAudio('idiomas');" onmouseout="idiomas.pause();" >
+						<select name="lang" class="jflanguageselection" size="1" onchange="document.location.replace(this.value);">
+							<option value="mapa.html" selected="selected">Español</option>
+							<option value="">English</option>
+							<option value="quechua/mapa.html">Quechua</option>
+						</select></a> 
+					</li>
 					<li><img id="imagen" src="images/icons/image1.png" onclick="cambiar(this);" class="img-responsive; background-position:center; " style="width:20px; height:20px; margin-top: 20px;"></li>
 		          </ul>
 		        </div>
