--- a/quechua/index.html
+++ b/quechua/index.html
@@ -336,7 +336,7 @@
 						<li class="multilang"><a href="#" data-nav-section="idiomas" onmouseover="openAudio('idiomas');" onmouseout="idiomas.pause();" >
 							<select name="lang" class="jflanguageselection" size="1" onchange="document.location.replace(this.value);">
 								<option value="../index.html" >Español</option>
-								<option value="">English</option>
+								<option value="../ingles/index.html">English</option>
 								<option value="../quechua/index.html" selected="selected">Quechua</option>
 							</select></a>  
 						</li>
