--- a/quechua/artistas.html
+++ b/quechua/artistas.html
@@ -58,7 +58,7 @@
 	<script>
 	// Array con todas las imágenes que deseamos que se vayan cambiando a
 	// cada clic
-	var imagenes=Array("images/icons/image1.png","images/icons/image2.png");
+	var imagenes=Array("../images/icons/image1.png","../images/icons/image2.png");
 	var imagenVisible=0;
  
 	// Función que cambia la imagen actual por la siguiente
@@ -331,7 +331,7 @@
 						<li class="multilang"><a href="#" data-nav-section="idiomas" onmouseover="openAudio('idiomas');" onmouseout="idiomas.pause();" >
 							<select name="lang" class="jflanguageselection" size="1" onchange="document.location.replace(this.value);">
 								<option value="../artistas.html" >Español</option>
-								<option value="">English</option>
+								<option value="../ingles/artistas.html">English</option>
 								<option value="../quechua/artistas.html" selected="selected">Quechua</option>
 							</select></a>  
 						</li>
