--- a/quechua/investigaciones.html
+++ b/quechua/investigaciones.html
@@ -333,7 +333,7 @@
 						<li class="multilang"><a href="#" data-nav-section="idiomas" onmouseover="openAudio('idiomas');" onmouseout="idiomas.pause();" >
 							<select name="lang" class="jflanguageselection" size="1" onchange="document.location.replace(this.value);">
 								<option value="../investigaciones.html" >Español</option>
-								<option value="">English</option>
+								<option value="./ingles/investigaciones.html">English</option>
 								<option value="../quechua/investigaciones.html" selected="selected">Quechua</option>
 							</select></a>  
 						</li>
