modificacion de textos en ingles

--- a/ingles/index.html
+++ b/ingles/index.html
@@ -985,7 +985,7 @@
 		<div class="container">
 			<div class="">
 				<div class="col-md-12 text-center">
-					<p>&copy; University Consortium.<br>Created by <a href="https://twitter.com/nelsibelly" target="_blank">Nelsi Melgarejo</a></p>
+					<p>&copy; University Consortium.</p>
 				</div>
 			</div>
 			<div class="row">
