--- a/ingles/escritores.html
+++ b/ingles/escritores.html
@@ -286,7 +286,7 @@ function openSection(texto){
 		<div class="container">
 			<div class="">
 				<div class="col-md-12 text-center">
-					<p>&copy; University Consortium.<br>Created by <a href="https://twitter.com/nelsibelly" target="_blank">Nelsi Melgarejo</a></p>
+					<p>&copy; University Consortium.</p>
 				</div>
 			</div>
 			<div class="row">
