audios- textos quechua

--- a/artistas.html
+++ b/artistas.html
@@ -170,8 +170,9 @@
 	<section>
 		<div style="background: #00a7a3; height:50px;">
 			<div class="search">
-				<input id="search" class="search-input"  type="text"> <i style="color:white;" class="icon-search2" aria-hidden="true"></i>
-			</div> 
+				<!-- <input id="search" class="search-input " type="text"> <i style="color:white;" class="icon-search2" aria-hidden="true"></i>
+			   -->
+			   </div> 
 		</div>
 	</section>
 	<header role="banner" id="fh5co-header">
