--- a/ingles/investigaciones.html
+++ b/ingles/investigaciones.html
@@ -220,7 +220,7 @@ function openSection(texto){
 
 <!-- menu home -->
 	
-	<section id="fh5co-home" data-section="traductor" style="height: 100%;" >
+	<section id="fh5co-home" data-section="home" style="height: 100%;" >
 		
 	
 
@@ -228,7 +228,7 @@ function openSection(texto){
 	
 
 
-	<section id="fh5co-work" data-section="quechua" >
+	<section id="fh5co-work" >
 	<div class="work-overlay"></div>
 		<div class="container">
 
@@ -284,7 +284,7 @@ function openSection(texto){
 		<div class="container">
 			<div class="">
 				<div class="col-md-12 text-center">
-					<p>&copy; University Consortium.<br>Created by <a href="https://twitter.com/nelsibelly" target="_blank">Nelsi Melgarejo</a></p>
+					<p>&copy; University Consortium.</p>
 				</div>
 			</div>
 			<div class="row">
