--- a/ingles/radios.html
+++ b/ingles/radios.html
@@ -194,11 +194,11 @@
 				
 		        <div id="navbar" class="navbar-collapse collapse">
 					  <ul class="nav navbar-nav navbar-right">
-						<li class="active"><a href="#" data-nav-section="home"><span>Quechua</span></a></li>
+						<li ><a href="#" data-nav-section="home"><span>Quechua</span></a></li>
 						<li><a href="#" data-nav-section="que"><span>What?</span></a></li>
 						<li><a href="#" data-nav-section="work"><span>How?</span></a></li>
 						<li><a href="#" data-nav-section="testimonials"><span>Inspiration</span></a></li>
-						<li><a href="#" data-nav-section="services"><span>Projects</span></a></li>
+						<li class="active"><a href="#" data-nav-section="services"><span>Projects</span></a></li>
 						<li><a href="#" data-nav-section="about"><span>We are</span></a></li>
 						<li><a href="#" data-nav-section="eventos"><span>Events</span></a></li>
 						<li class="multilang"><a href="#" data-nav-section="idiomas">
