--- a/investigaciones.html
+++ b/investigaciones.html
@@ -176,8 +176,8 @@
 	<div style="background: #00a7a3; height:50px;">
 				<!-- <div class="row"> -->
 			<div class="search">
-			  <input id="search" class="search-input"  type="text"> <i style="color:white;" class="icon-search2" aria-hidden="true"></i>
-			</div> 
+			  <!-- <input id="search" class="search-input " type="text"> <i style="color:white;" class="icon-search2" aria-hidden="true"></i>
+			   --></div> 
     </div>
 	</section>
 	<header role="banner" id="fh5co-header">
