--- a/quechua/escritores.html
+++ b/quechua/escritores.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Quechua" />
 	<meta name="keywords" content="siminchikkunarayku, quechua, runasimi, asr, reinvindicación, kichwa, traductor, andes, andino, tecnología, precolombino, aymara, ashanka, awjun, shipino, wanpis, kauki, kawsay" />
-	<meta name="author" content="FREEHTML5.CO" />
+
 
   
   	<!-- Facebook and Twitter integration -->
@@ -306,8 +306,8 @@
 	<div style="background: #00a7a3; height:50px;">
 				<!-- <div class="row"> -->
 			<div class="search">
-			  <input id="search" class="search-input"  type="text"> <i style="color:white;" class="icon-search2" aria-hidden="true"></i>
-			</div> 
+			  <!-- <input id="search" class="search-input " type="text"> <i style="color:white;" class="icon-search2" aria-hidden="true"></i>
+			   --></div> 
     </div>
 	</section>
 	<header role="banner" id="fh5co-header">
