--- a/quechua/investigaciones.html
+++ b/quechua/investigaciones.html
@@ -396,12 +396,9 @@ function openSection(texto){
 			<div class="row">
 				<div class="col-md-10  col-md-offset-1 ">
 					<p style="text-align: justify;">
-						En el primer video de esta serie es explicado lo que significa la portabilidad computacional de un idioma. Animamos a todos a 
-						observar no solo el primero, sino la serie entera que es un curso completo de procesamiento computacional del lenguaje humano. 
-						La locución está en idioma inglés, puede activiar la opción de subtítulos en inglés o la traducción automática de subtítulos. 
+						¿Imataq portabilidad computacional nisqan?, chaytam qawarinki kay qallariq vidiupi. Chayllatachu manam qawankiqa, ichaqa llapan yachachikuyta apariy chay procesamiento computacional del lenguaje humano nisqamanta. Inglés simipim kachkan, ichaqa subtitulawaqmi castilla simiman. 
 						<br>
-						Aunque el procesamiento previo de otros idiomas es útil, muchísimo trabajo científico debe hacerse por cada nuevo idioma procesado.
-						Y esa es la misión que nos hemos impuesto, procesar computacionalmente todos nuestros idiomas sudamericanos.</p>
+						Ancha sasam kay procesamiento computacional nisqan, chaytam rurasunchik llapallan Perú suyupi kaq siminchikkunapaq. </p>
 						
 				</div>
 			</div>
