--- a/quechua/radios.html
+++ b/quechua/radios.html
@@ -308,8 +308,8 @@
 	<div style="background: #00a7a3; height:50px;">
 				<!-- <div class="row"> -->
 			<div class="search">
-			  <input id="search" class="search-input"  type="text"> <i style="color:white;" class="icon-search2" aria-hidden="true"></i>
-			</div> 
+			  <!-- <input id="search" class="search-input " type="text"> <i style="color:white;" class="icon-search2" aria-hidden="true"></i>
+			   --></div> 
     </div>
 	</section>
 	<header role="banner" id="fh5co-header">
@@ -320,7 +320,7 @@
 		        	<!-- Mobile Toggle Menu Button -->
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 					<a class="navbar-brand" style = "background-image: url(../images/logoreal.png); width: 60px; height: 60px;" href="index.html">
-					<p style="  text-indent: 60px;   text-transform: uppercase; color: #000; font-size: 18px; ">siminchikkunarayku</p></a> 
+					</a> 
 				</div>
 				
 				
