--- a/escritores.html
+++ b/escritores.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-	<<html class="no-js"> <!--<![endif]-->
+	<html class="no-js"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -173,8 +173,8 @@
 	<div style="background: #00a7a3; height:50px;">
 				<!-- <div class="row"> -->
 			<div class="search">
-			  <input id="search" class="search-input"  type="text"> <i style="color:white;" class="icon-search2" aria-hidden="true"></i>
-			</div> 
+			  <!-- <input id="search" class="search-input " type="text"> <i style="color:white;" class="icon-search2" aria-hidden="true"></i>
+			   --></div> 
     </div>
 	</section>
 	<header role="banner" id="fh5co-header">
