--- a/ingles/qillqaq.html
+++ b/ingles/qillqaq.html
@@ -241,7 +241,7 @@ function openSection(texto){
 		<div class="row">
 			<div class="col-xs-12 col-sm-8 col-md-8 col-lg-7">
 				<p class="text-justify">
-					El paradigma vigente, modelo oculto de Markov ha generado herramientas comerciales (Google Voice, Amazon Echo, Cortana o Siri) con un impresionante nivel sin alcanzar la perfección pero sí un nivel operativo. Sin embargo el modelo oculto de Markov prácticamente alcanzó el techo y cualquier nuevo avance será solamente incremental. Debe recordarse que las herramientas comerciales mencionadas solamente están disponibles para aproximadamente cincuenta idiomas. Si se apuesta por esta tecnología quizás podría alcanzarse para el idioma quechua el nivel actual, operativo pero imperfecto, de sistemas ASR en otros idiomas, sin embargo se correría el riesgo que el producto desarrollado rápidamente quede desfasado y caduco.
+					The current paradigm, hidden Markov model has generated commercial tools (Google Voice, Amazon Echo, Cortana or Siri) with an impressive level without achieving perfection but an operational level. However the hidden model of Markov practically reached the ceiling and any new advance will be only incremental. It should be remembered that the commercial tools mentioned are only available for approximately fifty languages. If one opts for this technology, perhaps the current level, operational but imperfect, of the ASR systems in other languages could be reached for the Quechua language, nevertheless the risk would be that the developed product quickly becomes outdated and outdated.
 				</p>
 			</div>
 			
@@ -270,7 +270,7 @@ function openSection(texto){
 			<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 			  
 				<p class="text-justify">
-					Se descubrió que existe una tendencia creciente a utilizar modelos basados en redes neuronales; la curva de aprendizaje toma más tiempo pero es claro que en el largo plazo esta es la mejor opción.
+					It was found that there is an increasing tendency to use models based on neural networks; the learning curve takes more time but it is clear that in the long run this is the best option.
 				</p> 
 			</div>		
 		</div>
@@ -279,9 +279,9 @@ function openSection(texto){
 
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-				<h3> Pasos para la creación de un ASR:</h3>
+				<h3>Steps for creating an ASR:</h3>
 					<p class="text-justify">
-						El sistema de reconocimiento de voz que transcribe directamente los datos de audio con texto, sin necesidad de una representación fonética intermedia se basa en una combinación de “deep bidirectional LSTM recurrent neural network architecture” y “Connectionist Temporal Classification objective function”
+						The voice recognition system that directly transcribes audio data with text without the need for an intermediate phonetic representation is based on a combination of "deep bidirectional LSTM recurrent neural network architecture" and "Connectionist Temporal Classification objective function".
 						</lu>
 					</p>
 			</div>
@@ -300,7 +300,7 @@ function openSection(texto){
 	
 
 		<div class=" row">
-			<h3> Las librerias utilizadas en el proyecto son:</h3>
+			<h3> The libraries used in the project are:</h3>
 			<div class="col-xs-12 col-sm-6 col-md-3">
 			•	Torch
 			</div>
