--- a/quechua/qillqaq.html
+++ b/quechua/qillqaq.html
@@ -307,8 +307,8 @@
 	<div style="background: #00a7a3; height:50px;">
 				<!-- <div class="row"> -->
 			<div class="search">
-			  <input id="search" class="search-input"  type="text"> <i style="color:white;" class="icon-search2" aria-hidden="true"></i>
-			</div> 
+			  <!-- <input id="search" class="search-input " type="text"> <i style="color:white;" class="icon-search2" aria-hidden="true"></i>
+			   --></div> 
     </div>
 	</section>
 	<header role="banner" id="fh5co-header">
@@ -319,7 +319,7 @@
 		        	<!-- Mobile Toggle Menu Button -->
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 					<a class="navbar-brand" style = "background-image: url(../images/logoreal.png); width: 60px; height: 60px;" href="index.html">
-					<p style="  text-indent: 60px;   text-transform: uppercase; color: #000; font-size: 18px; ">siminchikkunarayku</p></a> 
+					</a> 
 				</div>
 				
 				
@@ -334,9 +334,9 @@
 						<li><a href="#" data-nav-section="eventos" onmouseover="openAudio('eventos');" onmouseout="eventos.pause();" ><span>Quñunakuykuna</span></a></li>
 						<li class="multilang"><a href="#" data-nav-section="idiomas" onmouseover="openAudio('idiomas');" onmouseout="idiomas.pause();" >
 							<select name="lang" class="jflanguageselection" size="1" onchange="document.location.replace(this.value);">
-								<option value="../index.html" >Español</option>
-								<option value="">English</option>
-								<option value="../quechua/index.html" selected="selected">Quechua</option>
+								<option value="../qillqaq.html" >Español</option>
+								<option value="../ingles/qillqaq.html">English</option>
+								<option value="../quechua/qillqaq.html" selected="selected">Quechua</option>
 							</select></a> 
 						</li>
 						<li><img id="imagen" src="../images/icons/image1.png" onclick="cambiar(this);" class="img-responsive; background-position:center; " style="width:20px; height:20px; margin-top: 20px;"></li>
