--- a/ingles/index.html
+++ b/ingles/index.html
@@ -306,9 +306,9 @@
 
 	<section>
 		<div style="background: #00a7a3; height:50px;">
-			<div class="search col-xs-12 col-sm-6 col-md-6 col-lg-3">
+			<!--<div class="search col-xs-12 col-sm-6 col-md-6 col-lg-3">
 			    <input id="search" class="search-input " type="text"> <i style="color:white;" class="icon-search2" aria-hidden="true"></i>
-			</div> 
+			</div>-->
 		</div>
 	</section>
 
