--- a/ingles/mapa.html
+++ b/ingles/mapa.html
@@ -176,7 +176,7 @@
    <!--goglemaps-->
    <!--Escritores-->
    
-   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+   <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
    <script type="text/javascript">
    
    
@@ -390,9 +390,9 @@ function openSection(texto){
 
 
 
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js">
+	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js">
 	</script> 
-	<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js">
+	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js">
 	</script>
 	<script type="text/javascript" src="../js/slick/slick.min.js"></script>
 	
