--- a/ingles/index.html
+++ b/ingles/index.html
@@ -474,7 +474,7 @@
 
 <!-- como lo hacemos -->
 
-	<section id="fh5co-work" data-section="work" style="background: url(images/micro2.jpg); background-size: cover; background-attachment: fixed; background-position: center; background-repeat:no-repeat; min-height: 20px;" >
+	<section id="fh5co-work" data-section="work" >
 		<div class="work-overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -529,7 +529,7 @@
 			<div class="col-md-12 section-heading text-center">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 subtext to-animate">
-						<a href="mapa.html"><h3>See map</h3></a>
+						<a href="mapa.html" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-map-marker"></span> see map</a>
 					</div>
 				</div>
 			</div>
@@ -890,7 +890,7 @@
 			</div>
 			<div class="row ">			
 				<figure>
-						<img  src="../images/evento.jpg"  class="img-responsive" style="margin-left: 10%;">
+						<img  src="../images/evento.jpg"  class="img-responsive" style="display:block; margin:auto;">
 				</figure>
 			</div>			
 		</div>		
@@ -969,15 +969,20 @@
 			</div>
 			
 			<div class="row">
-				<div class="col-md-6 ">
+				<div class="col-md-4 ">
 					<a href="https://www.youtube.com/user/pucp" target="_blank" >
-					<img src="../images/auspiciadores/pucp.png" style="width:500px" >
+					<img src="../images/auspiciadores/pucp.png" style="width:300px" >
 					</a>
 				</div>
-				<div class="col-md-6 ">
-				<br><br>
+				<div class="col-md-4 ">
+				<br>
 				<a href="https://www.youtube.com/user/ConcytecPeru/featured" target="_blank">
-					<img src="../images/auspiciadores/concytec.png" style="width:500px"></a>
+					<img src="../images/auspiciadores/concytec.png" style="width:300px"></a>
+				</div>
+				<div class="col-md-4 ">
+				<br>
+				<a href="" target="_blank">
+					<img src="../images/auspiciadores/internetsociety.png" style="width:300px"></a>
 				</div>
 			</div>
 		</div>
