--- a/quechua/index.html
+++ b/quechua/index.html
@@ -58,7 +58,7 @@
 	<script>
 	// Array con todas las imágenes que deseamos que se vayan cambiando a
 	// cada clic
-	var imagenes=Array("images/icons/image1.png","images/icons/image2.png");
+	var imagenes=Array("../images/icons/image1.png","../images/icons/image2.png");
 	var imagenVisible=0;
  
 	// Función que cambia la imagen actual por la siguiente
@@ -90,6 +90,7 @@
 	window.onload=function() {
 		cargarSiguienteImagen();
 	}
+	
 	
 	
 	
@@ -320,7 +321,7 @@
 		        	<!-- Mobile Toggle Menu Button -->
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 					<a class="navbar-brand" style = "background-image: url(../images/logoreal.png); width: 60px; height: 60px;" href="index.html">
-					<p style="  text-indent: 60px;   text-transform: uppercase; color: #000; font-size: 18px; "></p></a> 
+					<p style="  text-indent: 60px;   text-transform: uppercase; color: rgba(70, 91, 110, 3); font-size: 18px; "></p></a> 
 				</div>
 				
 				
@@ -470,7 +471,7 @@
 
 <!-- como lo hacemos -->
 
-	<section id="fh5co-work" data-section="work" style="background: url(../images/micro2.jpg); background-size: cover; background-attachment: fixed; background-position: center; background-repeat:no-repeat; min-height: 20px;" >
+	<section id="fh5co-work" data-section="work" 	>
 		<div class="work-overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -525,7 +526,7 @@
 			<div class="col-md-12 section-heading text-center">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 subtext to-animate">
-						<a href="mapa.html"><h3>Qichwa simi tiqsi muyupi</h3></a>
+						<a href="mapa.html" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-map-marker"></span> Qichwa simi tiqsi muyupi</a>
 					</div>
 				</div>
 			</div>
@@ -574,7 +575,7 @@
 						</blockquote>
 						<div class="author to-animate">
 							<figure><img src="../images/ronald.png" alt="Person"></figure>
-							<a href="http://ronaldahmed.github.io/">
+							<a href="https://ronaldahmed.github.io/">
 							<p>Ronald Ahmed Cárdenas Acosta </a><br>
 								Universidad Nacional de Ingenieria
 								<span class="subtext">Yachay maskapaq</span>
@@ -875,7 +876,7 @@
     <div class="eventos-overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12 section-heading text-center" style="margin-top: 50px;">
+				<div class="col-md-10 section-heading text-center" style="margin-top: 50px;">
 					<h2 class="" onmouseout="eventos.pause();" onmouseover="openAudio('eventos')">Huñunakuykuna</h2>
 					<div class="row">
 						<div class="col-md-10 col-md-offset-1 subtext ">
@@ -886,7 +887,7 @@
 			</div>
 			<div class="row ">			
 				<figure>
-						<img  src="../images/evento.jpg"  class="img-responsive" style="margin-left: 10%;">
+						<img  src="../images/evento.jpg"  class="img-responsive" style="display:block; margin:auto;">
 				</figure>
 			</div>			
 		</div>		
@@ -965,15 +966,20 @@
 			</div>
 			
 			<div class="row">
-				<div class="col-md-6 ">
+				<div class="col-md-4 ">
 					<a href="https://www.youtube.com/user/pucp" target="_blank" >
-					<img src="../images/auspiciadores/pucp.png" style="width:500px" >
+					<img src="../images/auspiciadores/pucp.png" style="width:300px" >
 					</a>
 				</div>
-				<div class="col-md-6 ">
-				<br><br>
+				<div class="col-md-4 ">
+				<br>
 				<a href="https://www.youtube.com/user/ConcytecPeru/featured" target="_blank">
-					<img src="../images/auspiciadores/concytec.png" style="width:500px"></a>
+					<img src="../images/auspiciadores/concytec.png" style="width:300px"></a>
+				</div>
+				<div class="col-md-4 ">
+				<br>
+				<a href="" target="_blank">
+					<img src="../images/auspiciadores/internetsociety.png" style="width:300px"></a>
 				</div>
 			</div>
 		</div>
