--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 	<html class="no-js"> <!--<![endif]-->
 	<head>
+	
+	
+	<script async src = "https://www.googletagmanager.com/gtag/js?id=UA-113067593-1" > 
+	</ script> 
+	<script> 
+	ventana . dataLayer = ventana . dataLayer || []; función gtag () { dataLayer . push ( argumentos );} 
+	gtag ( 'js' , new Date ());
+
+	gtag ( 'config' , 'UA-113067593-1' ); 
+	</ script> 
+		
+	
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Siminchikkunarayku  </title>
@@ -373,7 +385,7 @@
 	<section id="fh5co-intro">
 		<div class="container">
 			<div class="row row-bottom-padded-lg">
-				<div class="fh5co-block to-animate"  >
+				<div class="fh5co-block to-animate col-md-3 col-sm-6 col-xxs-12"  >
 					<div class="overlay-darker"></div>
 					<div class="overlay"></div>
 					<div class="fh5co-text" onmouseover="openAudio('corpus')" onmouseout="corpus.pause();">
@@ -383,7 +395,7 @@
 						<p><a href="https://kuelap.telecom.pucp.edu.pe/corpus/login/?next=/corpus/" class="btn btn-primary">Ayudanos</a></p>
 					</div>
 				</div>
-				<div class="fh5co-block to-animate" >
+				<div class="fh5co-block to-animate col-md-3 col-sm-6 col-xxs-12" >
 					<div class="overlay-darker"></div>
 					<div class="overlay"></div>
 					<div class="fh5co-text" onmouseover="openAudio('investigaciones')" onmouseout="investigaciones.pause();">
@@ -393,7 +405,7 @@
 						<p><a href="investigaciones.html" class="btn btn-primary">Entrar</a></p>
 					</div>
 				</div>
-				<div class="fh5co-block to-animate" >
+				<div class="fh5co-block to-animate col-md-3 col-sm-6 col-xxs-12" >
 					<div class="overlay-darker"></div>
 					<div class="overlay"></div>
 					<div class="fh5co-text" onmouseover="openAudio('proyectos')" onmouseout="proyectos_menu.pause();">
@@ -702,9 +714,11 @@
 					<p style="font-size: 18px;">La comunidad de radios que transmiten su programación en la lengua Quechua.</p>
 				</div>
 				<div class="col-md-3 col-sm-6 text-center fh5co-service to-animate"  >
-					<img src="images/icons/event.png" class="icons_bottom">
-					<h3  onmouseout="eventos.pause();" onmouseover="openAudio('eventos')">EVENTOS</h3>
-					<p style="font-size: 18px;">  Eventos académicos, artísticos y culturales sobre la lengua Quechua.</p> 
+					 <a href="https://www.qichwa.net/#/" target="_blank">
+					 <img src="images/icons/quechuadic.png" class="icons_bottom">
+					 </a>
+					<h3  onmouseout="eventos.pause();" onmouseover="openAudio('eventos')">QICHWADIC</h3>
+					<p style="font-size: 18px;">Diccionario virtual construído con base en los diccionarios impresos recopilados por ILLA.</p> 
 				</div>
 			</div>
 
@@ -735,7 +749,7 @@
 						<img src="images/icons/simidic.png" class="icons_bottom">
 					</a>
 					<h3>SIMIDIC</h3>
-					<p style="font-size: 18px;">Primer diccionario de Quechua online creado por ketanolap.</p>
+					<p style="font-size: 18px;">Primer diccionario online de Quechua creado por ketanolab con base en los diccionarios impresos recopilados por ILLA.</p>
 				</div>
 			</div>
 	</section>
@@ -756,8 +770,8 @@
 			</div>
 			<div class="row data " data-slick='{"slidesToShow": 3, "slidesToScroll": 1}'>
 <!-- luis -->
-				<div class="fondo">
-					<div class="fh5co-person text-center to-animate ">
+				<div class="fondo col-md-4 col-sm-6 col-xxs-12">
+					<div class="fh5co-person text-center to-animate">
 						<figure><img src="images/person1.jpg" alt="Image"></figure>
 						<h3>Atuq Kamachikuq</h3>
 						<span class="fh5co-position">Investigador Principal</span>
@@ -770,7 +784,7 @@
 					</div>
 				</div>
 <!-- Ronal -->
-				<div class="fondo">
+				<div class="fondo col-md-4 col-sm-6 col-xxs-12">
 					<div class="fh5co-person text-center to-animate">
 						<figure><img src="images/ronald.png" alt="Image"></figure>
 						<h3>Ronald Ahmed Cárdenas Acosta</h3>
@@ -784,7 +798,7 @@
 					</div>
 				</div>
 <!-- nelsi -->
-				<div class="fondo">
+				<div class="fondo col-md-4 col-sm-6 col-xxs-12">
 					<div class="fh5co-person text-center to-animate">
 						<figure><img src="images/person2.jpg" alt="Image"></figure>
 						<h3>Nelsi Melgarejo Vergara</h3>
@@ -798,7 +812,7 @@
 					</div>
 				</div>
 <!-- rodo -->			
-				<div class="fondo">
+				<div class="fondo col-md-4 col-sm-6 col-xxs-12">
 					<div class="fh5co-person text-center to-animate">
 						<figure><img src="images/person3.jpg" alt="Image"></figure>
 						<h3>Rodolfo Zevallos Salazar</h3>
@@ -813,7 +827,7 @@
 					</div>
 				</div>
 <!-- lorenzo -->
-				<div class="fondo">
+				<div class="fondo col-md-4 col-sm-6 col-xxs-12">
 					<div class="fh5co-person text-center to-animate">
 						<figure><img src="images/person4.jpg" alt="Image"></figure>
 						<h3>Lorenzo Ruiz De La Vega Tenorio</h3>
@@ -979,7 +993,7 @@
 				</div>
 				<div class="col-md-4 ">
 				<br>
-				<a href="" target="_blank">
+				<a href="https://www.internetsociety.org/" target="_blank">
 					<img src="images/auspiciadores/internetsociety.png" style="width:300px"></a>
 				</div>
 			</div>
