--- a/ingles/index.html
+++ b/ingles/index.html
@@ -372,7 +372,7 @@
 	<section id="fh5co-intro">
 		<div class="container">
 			<div class="row row-bottom-padded-lg">
-				<div class="fh5co-block to-animate"  >
+				<div class="fh5co-block to-animate col-md-3 col-sm-6 col-xxs-12"  >
 					<div class="overlay-darker"></div>
 					<div class="overlay"></div>
 					<div class="fh5co-text" onmouseover="openAudio('corpus')" onmouseout="corpus.pause();">
@@ -382,7 +382,7 @@
 						<p><a href="https://kuelap.telecom.pucp.edu.pe/corpus/login/?next=/corpus/" class="btn btn-primary">HELP US</a></p>
 					</div>
 				</div>
-				<div class="fh5co-block to-animate" >
+				<div class="fh5co-block to-animate col-md-3 col-sm-6 col-xxs-12" >
 					<div class="overlay-darker"></div>
 					<div class="overlay"></div>
 					<div class="fh5co-text" onmouseover="openAudio('investigaciones')" onmouseout="investigaciones.pause();">
@@ -392,7 +392,7 @@
 						<p><a href="investigaciones.html" class="btn btn-primary">GET IN</a></p>
 					</div>
 				</div>
-				<div class="fh5co-block to-animate" >
+				<div class="fh5co-block to-animate col-md-3 col-sm-6 col-xxs-12" >
 					<div class="overlay-darker"></div>
 					<div class="overlay"></div>
 					<div class="fh5co-text" onmouseover="openAudio('proyectos')" onmouseout="proyectos_menu.pause();">
@@ -701,9 +701,11 @@
 					<p style="font-size: 18px;">The community of radios that transmit their programming in the language Quechua.</p>
 				</div>
 				<div class="col-md-3 col-sm-6 text-center fh5co-service to-animate"  >
-					<img src="../images/icons/event.png" class="icons_bottom">
-					<h3  onmouseout="eventos.pause();" onmouseover="openAudio('eventos')">EVENTOS</h3>
-					<p style="font-size: 18px;">  Eventos académicos, artísticos y culturales sobre la lengua Quechua.</p> 
+					 <a href="https://www.qichwa.net/#/" target="_blank">
+					 <img src="images/icons/quechuadic.png" class="icons_bottom">
+					 </a>
+					<h3  onmouseout="eventos.pause();" onmouseover="openAudio('eventos')">QICHWADIC</h3>
+					<p style="font-size: 18px;">Virtual dictionary built based on the printed dictionaries compiled by ILLA.</p> 
 				</div>
 			</div>
 
@@ -981,7 +983,7 @@
 				</div>
 				<div class="col-md-4 ">
 				<br>
-				<a href="" target="_blank">
+				<a href="https://www.internetsociety.org/" target="_blank">
 					<img src="../images/auspiciadores/internetsociety.png" style="width:300px"></a>
 				</div>
 			</div>
