--- a/ingles/traductor.html
+++ b/ingles/traductor.html
@@ -223,7 +223,7 @@ function openSection(texto){
 
 <!-- menu home -->
 	
-	<section id="fh5co-home" data-section="traductor" style="height: 800px;" >
+	<section id="fh5co-home" data-section="traductor" style="height: 100%;" >
 		
 	
 
