--- a/quechua/index.html
+++ b/quechua/index.html
@@ -372,7 +372,7 @@
 	<section id="fh5co-intro">
 		<div class="container">
 			<div class="row row-bottom-padded-lg">
-				<div class="fh5co-block to-animate"  >
+				<div class="fh5co-block to-animate col-md-3 col-sm-6 col-xxs-12"  >
 					<div class="overlay-darker"></div>
 					<div class="overlay"></div>
 					<div class="fh5co-text" onmouseover="openAudio('corpus_menu')" onmouseout="corpus_menu.pause();">
@@ -382,7 +382,7 @@
 						<p><a href="https://kuelap.telecom.pucp.edu.pe/corpus/login/?next=/corpus/" class="btn btn-primary">Ayudanos</a></p>
 					</div>
 				</div>
-				<div class="fh5co-block to-animate" >
+				<div class="fh5co-block to-animate col-md-3 col-sm-6 col-xxs-12" >
 					<div class="overlay-darker"></div>
 					<div class="overlay"></div>
 					<div class="fh5co-text" onmouseover="openAudio('investigaciones')" onmouseout="investigaciones.pause();">
@@ -392,7 +392,7 @@
 						<p><a href="investigaciones.html" class="btn btn-primary">Entrar</a></p>
 					</div>
 				</div>
-				<div class="fh5co-block to-animate" >
+				<div class="fh5co-block to-animate col-md-3 col-sm-6 col-xxs-12" >
 					<div class="overlay-darker"></div>
 					<div class="overlay"></div>
 					<div class="fh5co-text" onmouseover="openAudio('proyectos')" onmouseout="proyectos.pause();">
@@ -698,9 +698,11 @@
 					<p style="font-size: 18px;">Kay hatun wayra wasikunam maqchirimun qichwa simipi imapas willakuykunata.</p>
 				</div>
 				<div class="col-md-3 col-sm-6 text-center fh5co-service to-animate"  >
-					<img src="../images/icons/event.png" class="icons_bottom">
-					<h3  onmouseout="eventos.pause();" onmouseover="openAudio('eventos')">QUÑUNAKUYKUNA</h3>
-					<p style="font-size: 18px;">  Kaypim tarinki quñunakuykunata, imapas yachay maskapaymanta, takiykunamanta, llaqtanchik kuyakuykunamantapas.</p> 
+					 <a href="https://www.qichwa.net/#/" target="_blank">
+					 <img src="images/icons/quechuadic.png" class="icons_bottom">
+					 </a>
+					<h3  onmouseout="eventos.pause();" onmouseover="openAudio('eventos')">QICHWADIC</h3>
+					<p style="font-size: 18px;">Internetpi simipirwa, ILLA nisqanpa simipirwakuna huqarisqanwan rurasqa.</p> 
 				</div>
 			</div>
 
@@ -731,7 +733,7 @@
 						<img src="../images/icons/simidic.png" class="icons_bottom">
 					</a>
 					<h3>SIMIDIC</h3>
-					<p style="font-size: 18px;">Kayqa allin diccionarium qichwa simitam internitpa ukunpi yanapanqa, ruwarqam ketanolap.</p>
+					<p style="font-size: 18px;">Internetpi ñawpariq qichwa simipirwa, ILLApa huñusqan simipirwakunawan Ketanolabpa rurasqan.  <p>
 				</div>
 			</div>
 	</section>
@@ -978,7 +980,7 @@
 				</div>
 				<div class="col-md-4 ">
 				<br>
-				<a href="" target="_blank">
+				<a href="https://www.internetsociety.org/" target="_blank">
 					<img src="../images/auspiciadores/internetsociety.png" style="width:300px"></a>
 				</div>
 			</div>
