--- a/quechua/mapa.html
+++ b/quechua/mapa.html
@@ -58,7 +58,7 @@
 	<script>
 	// Array con todas las imágenes que deseamos que se vayan cambiando a
 	// cada clic
-	var imagenes=Array("images/icons/image1.png","images/icons/image2.png");
+	var imagenes=Array("../images/icons/image1.png","../images/icons/image2.png");
 	var imagenVisible=0;
  
 	// Función que cambia la imagen actual por la siguiente
