--- a/traductor.html
+++ b/traductor.html
@@ -206,7 +206,7 @@
 								<option value="quechua/traductor.html">Quechua</option>
 							</select></a> 
 						</li>
-						<li><img id="imagen" src="images/icons/image1.png" onclick="cambiar(this);" class="img-responsive; background-position:center; " style="width:20px; height:20px; margin-top: 20px;"></li>
+					
 					  </ul>
 		        </div>
 			</nav>
@@ -224,7 +224,7 @@ function openSection(texto){
 
 <!-- menu home -->
 	
-	<section id="fh5co-home" data-section="traductor" style="height: 800px;" >
+	<section id="fh5co-home" data-section="traductor" style="height: 100%;" >
 		
 	
 
