--- a/quechua/traductor.html
+++ b/quechua/traductor.html
@@ -58,7 +58,7 @@
 	<script>
 	// Array con todas las imágenes que deseamos que se vayan cambiando a
 	// cada clic
-	var imagenes=Array("images/icons/image1.png","images/icons/image2.png");
+	var imagenes=Array("../images/icons/image1.png","../images/icons/image2.png");
 	var imagenVisible=0;
  
 	// Función que cambia la imagen actual por la siguiente
@@ -317,7 +317,7 @@
 		        	<!-- Mobile Toggle Menu Button -->
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 					<a class="navbar-brand" style = "background-image: url(../images/logoreal.png); width: 60px; height: 60px;" href="index.html">
-					<p style="  text-indent: 60px;   text-transform: uppercase; color: #000; font-size: 18px; ">siminchikkunarayku</p></a> 
+					<p style="  text-indent: 60px;   text-transform: uppercase; color: #000; font-size: 18px; "></p></a> 
 				</div>
 				
 				
@@ -355,7 +355,7 @@ function openSection(texto){
 
 <!-- menu home -->
 	
-	<section id="fh5co-home" data-section="traductor" style="height: 800px;" >
+	<section id="fh5co-home" data-section="traductor" style="height: 100%;" >
 		
 	
 
