--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 	<head>
 	
 	
-	<script async src = "https://www.googletagmanager.com/gtag/js?id=UA-113083764-1" > 
-	</ script> 
-	<script> 
-	ventana . dataLayer = ventana . dataLayer || []; función gtag () { dataLayer . push ( argumentos );} 
-	gtag ( 'js' , new Date ());
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113083764-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-	gtag ( 'config' , 'UA-113083764-1' ); 
-	</ script> 
+  gtag('config', 'UA-113083764-1');
+</script>
+
 		
 	
 	<meta charset="utf-8">
